--- a/logseq/custom.css
+++ b/logseq/custom.css
@@ -18,7 +18,7 @@ GLOBAL VARIABLES
     --ls-color-greensea: rgba(22,160,133,1);
     --ls-color-emerland: rgba(46,204,113,1);
     --ls-color-nephritis: rgba(39,174,96,1);
-    --ls-color-peter-river: rgba(52,152,219,1);
+    --ls-color-peter-river: rgb(160 158 233);
     --ls-color-belize-hole: rgba(41,128,185,1);
     --ls-color-amethyst: rgba(155,89,182,1);
     --ls-color-wisteria: rgba(142,68,173,1);
@@ -103,4 +103,9 @@ a.tag[data-ref="universidad"] {
 
 a.tag[data-ref="extractos"] {
     background-color: var(--ls-color-turquoise) !important;
+}
+
+mark {
+    background: var(--ls-color-peter-river) !important;
+    color: white;
 }
